navbar and dark blue section

--- a/index.html
+++ b/index.html
@@ -7,13 +7,30 @@
     <title>Landing page</title>
 </head>
 <body>
-    <div class="flex-container1">
-        <div class="flex-container11">
-            <div class= "header" id="b1">Header Logo</div>
-            <div class="header" id="b2">header link one</div>
-            <div class="header" id="b3">header link two</div>
-            <div class="header" id="b4">header link three</div>
+
+        <div class="container"></div>
+           <nav>
+            <div class="Logo">Header logo</div> 
+            <ul>
+                <li><a href=""><i  class="header">Header link one </i></a></li>
+                <li><a href=""><i  class="header">Header link two</i></a></li>
+                <li><a href=""><i  class="header">Header link there</i></a></li>
+            </ul>
+           </nav>
+    
+    
+    <div class="container-2">
+        <div class="box-1" >
+            <span class="text-1">This website is awesome</span>
+           <span class="text-2"> this website has some subtext that goes here under main title it smaller font and the color is lower contrast</span>
+           <button type="button" class="button">Sign up</button>
+
+
         </div>
-    </div>      
+        <div class="box-2">
+        <img src="place.png" >
+        </div> 
+
+    </div> 
 </body>
 </html>
