working with first section

--- a/index.html
+++ b/index.html
@@ -3,33 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" />
     <title>Landing page</title>
+    <link rel= "stylesheet" href="style.css">
 </head>
 <body>
-
-        <div class="container"></div>
-           <nav>
-            <div class="Logo">Header logo</div> 
-            <ul>
-                <li><a href=""><i  class="header">Header link one </i></a></li>
-                <li><a href=""><i  class="header">Header link two</i></a></li>
-                <li><a href=""><i  class="header">Header link there</i></a></li>
-            </ul>
-           </nav>
-    
-    
-    <div class="container-2">
-        <div class="box-1" >
-            <span class="text-1">This website is awesome</span>
-           <span class="text-2"> this website has some subtext that goes here under main title it smaller font and the color is lower contrast</span>
-           <button type="button" class="button">Sign up</button>
-
-
+    <div class="first-section">
+        <div class="navbar">
+            <div class="navbar-left">
+              <p id="header-logo">Header Logo</p>  
+            </div>
+            <div class="navbar-right">
+                <ul style="list-style-type: none;">
+                    <li class="header-link">header link one</li>
+                    <li class="header-link">header link two</li>
+                    <li class="header-link">header link three</li>
+                </ul>
+            </div>
         </div>
-        <div class="box-2">
-        <img src="place.png" >
-        </div> 
+        <div class="content">
+            <div class="content-left">
+                    <h1> This website is awesome</h1>
+                    <p> This website has some subtext that goes under the main title. It's smaller font and color is lower contrast.</p>
+                    <button type="button" class="Sign">Sign</button>
+                </div>
+            <div class="content-right">
+                <img src="hacker.jpg" alt="hackerman" width="500">
+            </div>
+        </div>
 
     </div> 
 </body>
