finish first section

--- a/index.html
+++ b/index.html
@@ -22,15 +22,14 @@
         </div>
         <div class="content">
             <div class="content-left">
-                    <h1> This website is awesome</h1>
-                    <p> This website has some subtext that goes under the main title. It's smaller font and color is lower contrast.</p>
+                    <h1> This website is <br/> awesome</h1>
+                    <p class="p-first"> This website has some subtext that goes under the <br/> main title. It's smaller font and color is lower <br/>contrast.</p>
                     <button type="button" class="Sign">Sign</button>
-                </div>
+            </div>
             <div class="content-right">
                 <img src="hacker.jpg" alt="hackerman" width="500">
             </div>
         </div>
-
     </div> 
 </body>
 </html>
