finish seconde section : )

--- a/index.html
+++ b/index.html
@@ -31,5 +31,26 @@
             </div>
         </div>
     </div> 
+    <div class="second-section">
+        <h2>Some random information</h2>
+        <div class="row-of-blue-divs">
+            <div class="box-of-blue-msg">
+                <div class="box-blue"></div>
+                <p class="p-second">this is a subtext<br/> under a illustration<br/> or a image</p>
+            </div>
+            <div class="box-of-blue-msg">
+                <div class="box-blue"></div>
+                <p class="p-second">this is a subtext<br/> under a illustration or<br/> a image</p>
+            </div>
+            <div class="box-of-blue-msg">
+                <div class="box-blue"></div>
+                <p class="p-second">this is a subtext<br/> under a illustration or<br/>  a image</p>
+            </div>
+            <div class="box-of-blue-msg">
+                <div class="box-blue"></div>
+                <p class="p-second">this is a subtext<br/> under a illustration<br/>  or a image</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
