finish  third section

--- a/index.html
+++ b/index.html
@@ -52,5 +52,12 @@
             </div>
         </div>
     </div>
+    <div class="third-section">
+        <h3>We fight not so that the world will remember us<br/>but so that there will<br> be a world to remember
+        </h3>
+        <div class="p-div">
+        <p class="p-third">Captin Price</p>
+        </div>
+    </div>
 </body>
 </html>
