finish last section

--- a/index.html
+++ b/index.html
@@ -56,7 +56,18 @@
         <h3>We fight not so that the world will remember us<br/>but so that there will<br> be a world to remember
         </h3>
         <div class="p-div">
-        <p class="p-third">Captin Price</p>
+        <p class="p-third"><strong>Captin Price</strong>-</p>
+        </div>
+    </div>
+    <div class="last-section">
+        <div class="blue-container">
+            <div class="left">
+                <h4>Call to action! It's tile!</h4>
+                <p class="last-p">Sign up for our product by clicking that button right over there </p>
+            </div>
+            <div class="right">
+                <button type="button" class="btn-last-div">Sign up</button>
+            </div>
         </div>
     </div>
 </body>
