--- a/index.html
+++ b/index.html
@@ -70,5 +70,8 @@
             </div>
         </div>
     </div>
+    <div class="footer">
+        Copyright The Odin Project 2023
+    </div>
 </body>
 </html>
